platform/tekton-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: &host tekton.alexlebens.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: tekton-secret-tls
